@@ -1,7 +1,7 @@
 # exec.libs - details of libraries needed to link bsd-games programs.
 # This file is used for automatic makefile generation.
 #
-# Copyright (c) 1998, 1999, 2000 Joseph Samuel Myers.
+# Copyright (c) 1998, 1999, 2000, 2003 Joseph Samuel Myers.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -35,6 +35,7 @@ boggle/boggle/boggle	$(NCURSES_LIB)
 caesar	-lm
 canfield/canfield/canfield	$(NCURSES_LIB)
 cribbage	$(NCURSES_LIB)
+factor	$(OPENSSL_LIB)
 gomoku	$(NCURSES_LIB)
 hack	$(NCURSES_LIB)
 hangman	$(NCURSES_LIB)
