@@ -1,7 +1,7 @@
 #!/bin/sh
 # tests/factor.test - test functionality of factor.
 #
-# Copyright (c) 1999 Joseph Samuel Myers.
+# Copyright (c) 1999, 2003 Joseph Samuel Myers.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -55,3 +55,15 @@ factor/factor <<EOF >test.out 2>&1 || failtest
 EOF
 compare test.out tests/factor.123456
 rm -f test.out
+
+if grep -q HAVE_OPENSSL include/bsd-games.h; then
+    testno 5
+    factor/factor 987654321987654 >test.out 2>&1 || failtest
+    compare test.out tests/factor.987654321987654
+    rm -f test.out
+
+    testno 6
+    factor/factor 987654321987654321987 >test.out 2>&1 || failtest
+    compare test.out tests/factor.987654321987654321987
+    rm -f test.out
+fi
